[package]
name = "hexy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
leafwing-input-manager = "0.5.2"
iyes_loopless = "0.7"
bevy-inspector-egui = "0.13.0"
bevy_mod_raycast= "0.6"

[workspace]
resolver = "2"
members = [
    #"crates/*"
]

[profile.dev.package."*"]
opt-level=3